--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -30,4 +30,4 @@ jobs:
     - name: Installing Surge
       run: npm install --global surge
     - name: Deploying using serge
-      run: surge ./ ahsan-bootcamp2020sample.surge.sh --token ${{ secrets.SERGE_TOKEN }}
+      run: surge ./ ahsan-bootcamp2020sample.surge.sh --token ${{ secrets.SURGE_TOKEN }}
